# ColdDraft

./: .gitignore  README.md  requirements.txt
backend/: .env.example  .gitignore  install_instructions.txt  main.py  pyproject.toml  requirements.txt  run_server_instructions.txt
backend/app/: main.db  main.py
backend/app/campaigns/: crud.py  models.py  routes.py  schemas.py
backend/app/core/: database.py  security.py  settings.py
backend/app/llm/: message_generator.py  routes.py
backend/app/llm/contacts/Alex Chen/: prospect.json
backend/app/llm/contacts/Alex Chen/vector_db/: chroma.sqlite3
backend/app/llm/contacts/Arjun Malhotra/: prospect.json
backend/app/llm/contacts/Atharva/: prospect.json
backend/app/llm/contacts/Atharva kulkarni/: prospect.json
backend/app/llm/contacts/Marcus Chen/: prospect.json
backend/app/llm/contacts/Marcus Chen/vector_db/: chroma.sqlite3
backend/app/llm/contacts/Sahil Dinkar Katurde/: prospect.json
backend/app/llm/contacts/amd ryzen/: prospect.json
backend/app/llm/contacts/anuj/: prospect.json
backend/app/llm/contacts/tanvi dinkar katurde/: prospect.json
backend/app/llm/contacts/tanvi dinkar katurde/vector_db/: chroma.sqlite3
backend/app/prospect/: crud.py  models.py  routes.py  schemas.py
backend/app/users/: crud.py  models.py  routes.py  schemas.py
backend/app/utils/: file_generator.py
backend/src/: app.py
backend/src/core/: engine.py
backend/src/database/: db.py  models.py
backend/src/routes/: models.py  routing.py
frontend/: .gitignore  index.html  package-lock.json  package.json
(+26 files in other folders)
